formatting travel things to do

--- a/index.html
+++ b/index.html
@@ -612,70 +612,34 @@
 				</div>
 				<div class="container-fluid">
 					<div class="row">
-							<div class="col-xs-3 righttext">
-								Boqueria
-							</div>
-							<div class="col-xs-3 centered">
-								Click here
-							</div>
-							<div class="col-lg-6">
-								Info here
-							</div>
+						<div class="col-xs-3 righttext">Boqueria</div>
+						<div class="col-xs-3 centered">Click here</div>
+						<div class="col-xs-6"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
 					</div>
 					<div class="row">
-						<div class="col-xs-3 righttext">
-							Flippin' Pizza
-						</div>
-						<div class="col-xs-3 centered">
-							Click here
-						</div>
-						<div class="col-lg-6">
-							Info here
-						</div>
+						<div class="col-xs-3 righttext">Flippin' Pizza</div>
+						<div class="col-xs-3 centered">Click here</div>
+						<div class="col-xs-6"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
 					</div>
 					<div class="row">
-						<div class="col-xs-3 righttext">
-							Matchbox
-						</div>
-						<div class="col-xs-3 centered">
-							Click here
-						</div>
-						<div class="col-lg-6">
-							Info here
-						</div>
+						<div class="col-xs-3 righttext">Matchbox</div>
+						<div class="col-xs-3 centered">Click here</div>
+						<div class="col-xs-6"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
 					</div>
 					<div class="row">
-						<div class="col-xs-3 righttext">
-							Old Ebbit Grill
-						</div>
-						<div class="col-xs-3 centered">
-							Click here
-						</div>
-						<div class="col-lg-6">
-							Info here
-						</div>
+						<div class="col-xs-3 righttext">Old Ebbit Grill</div>
+						<div class="col-xs-3 centered">Click here</div>
+						<div class="col-xs-6"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
 					</div>
 					<div class="row">
-						<div class="col-xs-3 righttext">
-							The Hamilton
-						</div>
-						<div class="col-xs-3 centered">
-							Click here
-						</div>
-						<div class="col-lg-6">
-							Info here
-						</div>
+						<div class="col-xs-3 righttext">The Hamilton</div>
+						<div class="col-xs-3 centered">Click here</div>
+						<div class="col-xs-6"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
 					</div>
 					<div class="row">
-						<div class="col-xs-3 righttext">
-							Fainting Goat
-						</div>
-						<div class="col-xs-3 centered">
-							Click here
-						</div>
-						<div class="col-lg-6">
-							Info here
-						</div>
+						<div class="col-xs-3 righttext">Fainting Goat</div>
+						<div class="col-xs-3 centered">Click here</div>
+						<div class="col-xs-6"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
 					</div>
 				</div>
 			</div>
@@ -687,22 +651,22 @@
 					<div class="row">
 						<div class="col-xs-3 righttext">Washington Monument</div>
 						<div class="col-xs-3 centered">Click here</div>
-						<div class="col-lg-6">Info here</div>
+						<div class="col-xs-6"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
 					</div>
 					<div class="row">
 						<div class="col-xs-3 righttext">Capitol Building</div>
 						<div class="col-xs-3 centered">Click here</div>
-						<div class="col-lg-6">Info here</div>
+						<div class="col-xs-6"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
 					</div>
 					<div class="row">
 						<div class="col-xs-3 righttext">Ford's Theatre</div>
 						<div class="col-xs-3 centered">Click here</div>
-						<div class="col-lg-6">Info here</div>
+						<div class="col-xs-6"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
 					</div>
 					<div class="row">
 						<div class="col-xs-3 righttext">Newseum</div>
 						<div class="col-xs-3 centered">Click here</div>
-						<div class="col-lg-6">Info here</div>
+						<div class="col-xs-6"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
 					</div>
 				</div>
 			</div>
@@ -723,24 +687,19 @@
 				</div>
 				<div class="container-fluid">
 					<div class="row">
-						<div class="col-xs-3 righttext">Washington Monument</div>
+						<div class="col-xs-3 righttext">Reagan National Airport</div>
 						<div class="col-xs-3 centered">Click here</div>
-						<div class="col-lg-6">Info here</div>
+						<div class="col-xs-6"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
 					</div>
 					<div class="row">
-						<div class="col-xs-3 righttext">Capitol Building</div>
+						<div class="col-xs-3 righttext">Baltimore Washington International Airport</div>
 						<div class="col-xs-3 centered">Click here</div>
-						<div class="col-lg-6">Info here</div>
+						<div class="col-xs-6"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
 					</div>
 					<div class="row">
-						<div class="col-xs-3 righttext">Ford's Theatre</div>
+						<div class="col-xs-3 righttext">Dulles International Airport</div>
 						<div class="col-xs-3 centered">Click here</div>
-						<div class="col-lg-6">Info here</div>
-					</div>
-					<div class="row">
-						<div class="col-xs-3 righttext">Newseum</div>
-						<div class="col-xs-3 centered">Click here</div>
-						<div class="col-lg-6">Info here</div>
+						<div class="col-xs-6"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
 					</div>
 				</div>
 			</div>
@@ -750,24 +709,9 @@
 				</div>
 				<div class="container-fluid">
 					<div class="row">
-						<div class="col-xs-3 righttext">Washington Monument</div>
-						<div class="col-xs-3 centered">Click here</div>
-						<div class="col-lg-6">Info here</div>
-					</div>
-					<div class="row">
-						<div class="col-xs-3 righttext">Capitol Building</div>
-						<div class="col-xs-3 centered">Click here</div>
-						<div class="col-lg-6">Info here</div>
-					</div>
-					<div class="row">
-						<div class="col-xs-3 righttext">Ford's Theatre</div>
-						<div class="col-xs-3 centered">Click here</div>
-						<div class="col-lg-6">Info here</div>
-					</div>
-					<div class="row">
-						<div class="col-xs-3 righttext">Newseum</div>
-						<div class="col-xs-3 centered">Click here</div>
-						<div class="col-lg-6">Info here</div>
+						<div class="col-xs-3 righttext">Amtrak Union Station</div>
+						<div class="col-xs-3 centered"><a href="https://www.amtrak.com/servlet/ContentServer?pagename=am/am2Station/Station_Page&code=WAS">Amtrack Website</a></div>
+						<div class="col-xs-6"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
 					</div>
 				</div>
 			</div>
@@ -777,24 +721,29 @@
 				</div>
 				<div class="container-fluid fullsection">
 					<div class="row">
-						<div class="col-xs-3 righttext">Washington Monument</div>
+						<div class="col-xs-3 righttext">From BWI and I-95 from the North</div>
 						<div class="col-xs-3 centered">Click here</div>
-						<div class="col-lg-6">Info here</div>
+						<div class="col-xs-6"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
 					</div>
 					<div class="row">
-						<div class="col-xs-3 righttext">Capitol Building</div>
+						<div class="col-xs-3 righttext">From Pittsburgh and I-270 from the North</div>
 						<div class="col-xs-3 centered">Click here</div>
-						<div class="col-lg-6">Info here</div>
+						<div class="col-xs-6"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
 					</div>
 					<div class="row">
-						<div class="col-xs-3 righttext">Ford's Theatre</div>
+						<div class="col-xs-3 righttext">From Dulles</div>
 						<div class="col-xs-3 centered">Click here</div>
-						<div class="col-lg-6">Info here</div>
+						<div class="col-xs-6"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
 					</div>
 					<div class="row">
-						<div class="col-xs-3 righttext">Newseum</div>
+						<div class="col-xs-3 righttext">I-95 from the South</div>
 						<div class="col-xs-3 centered">Click here</div>
-						<div class="col-lg-6">Info here</div>
+						<div class="col-xs-6"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
+					</div>
+					<div class="row">
+						<div class="col-xs-3 righttext">From Reagan</div>
+						<div class="col-xs-3 centered">Click here</div>
+						<div class="col-xs-6"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
 					</div>
 				</div>
 			</div>
